Use the NodeBB docker image as a base. Remove templates-js-stub. Fix some layout issues near the top of the screen.

--- a/plugins/nodebb-plugin-tdwtf-customizations/custom.less
+++ b/plugins/nodebb-plugin-tdwtf-customizations/custom.less
@@ -636,3 +636,13 @@ div.profile a[href="/groups/sockdevs"] small {
 [data-property="customCSS"] + .help-block:after {
 	content: " This field can be read by moderators, so don't put any Mafia stuff in here.";
 }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+	.header .forum-title {
+		display: none;
+	}
+}
+
+.composing #header-menu {
+	z-index: 1000;
+}
